# plasma-audio-device-switcher

./: .gitignore  CMakeLists.txt  README.md  make-install.sh  make.sh  pack.sh
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: ConfigGeneral.qml  ConfigRelevantDevices.qml  main.qml
